--- a/BurgerQuiz/BurgerQuiz/BurgerQuiz.csproj
+++ b/BurgerQuiz/BurgerQuiz/BurgerQuiz.csproj
@@ -75,6 +75,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Equipe.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -128,7 +129,10 @@
     <Content Include="Images\burger.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Images\ketchupmayo_old.png">
+    <Content Include="Images\ketchup.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\mayo.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Images\menus.png">
