--- a/BurgerQuiz/BurgerQuiz/BurgerQuiz.csproj
+++ b/BurgerQuiz/BurgerQuiz/BurgerQuiz.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IniFile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -97,6 +98,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <None Include="BurgerQuiz_TemporaryKey.pfx" />
+    <None Include="config.ini">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
